<resources>
    <string name="app_name">Playlist maker</string>

    <string name="title_media">Медиатека</string>
    <string name="title_settings">Настройки</string>
    <string name="title_search">Поиск</string>
    <string name="title_history_search">Вы искали</string>
    <string name="title_track_duration">Длительность</string>
    <string name="title_collection_name">Альбом</string>
    <string name="title_release_year">Год</string>
    <string name="title_genre">Жанр</string>
    <string name="title_country">Страна</string>
    <string name="title_playlists">Плейлисты</string>
    <string name="title_favorites">Избранные треки</string>
    <string name="title_new_playlist">Новый плейлист</string>
    <string name="title_edit_playlist">Редактировать плейлист</string>
    <string name="title_add_to_playlist">Добавить в плейлист</string>

    <string name="hint_search">Поиск</string>
    <string name="hint_menu">Меню</string>
    <string name="hint_clear">Очистить</string>
    <string name="hint_cover">Обложка</string>
    <string name="hint_track_name">Название трека</string>
    <string name="hint_artist_name">Имя исполнителя</string>
    <string name="hint_add_to_playlist">Добавить в плейлист</string>
    <string name="hint_play_control">Играть/пауза</string>
    <string name="hint_like">Нравится</string>
    <string name="hint_track_duration">00:00</string>
    <string name="hint_playlist_duration">Длительность плейлиста</string>
    <string name="hint_collection_name">Название альбома</string>
    <string name="hint_release_year">1984</string>
    <string name="hint_genre">Рок</string>
    <string name="hint_country">Великобритания</string>
    <string name="hint_playlist_cover">Обложка плейлиста</string>
    <string name="hint_new_playlist_name">Название *</string>
    <string name="hint_playlist_descr">Описание</string>
    <string name="hint_playlist_name">Название плейлиста</string>
    <string name="hint_playlist_tracks_number">Количество треков</string>

    <string name="btn_dark_theme">Тёмная тема</string>
    <string name="btn_share">Поделиться</string>
    <string name="btn_share_app">Поделиться приложением</string>
    <string name="btn_support">Написать в поддержку</string>
    <string name="btn_user_agreement">Пользовательское соглашение</string>
    <string name="btn_update">Обновить</string>
    <string name="btn_clear_history">Очистить историю</string>
    <string name="btn_new_playlist">Новый плейлист</string>
    <string name="btn_create">Создать</string>
    <string name="btn_save">Сохранить</string>
    <string name="btn_share_playlist">Поделиться</string>
    <string name="btn_edit_info">Редактировать информацию</string>
    <string name="btn_remove_playlist">Удалить плейлист</string>

    <string name="url_share_app">https://practicum.yandex.ru/android-developer</string>
    <string name="url_user_agreement">https://yandex.ru/legal/practicum_offer</string>
    <string name="support_mail_address">sobolevkir@bk.ru</string>

    <string name="support_mail_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="support_mail_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>

    <string name="error_nothing_found">Ничего не нашлось</string>
    <string name="error_connection_problem">Проблемы со связью \n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="error_media_empty">Ваша медиатека пуста</string>
    <string name="error_no_playlists">Вы не создали \nни одного плейлиста</string>
    <string name="error_duplicate_playlist">Плейлист с таким названием уже есть</string>

    <string name="warning_finish_creating_playlist">Завершить создание плейлиста?</string>
    <string name="warning_unsaved_data_lost">Все несохраненные данные будут потеряны</string>
    <string name="warning_delete_track">Хотите удалить трек?</string>
    <string name="warning_delete_playlist">Хотите удалить плейлист?</string>

    <string name="action_cancel">Отмена</string>
    <string name="action_no">Нет</string>
    <string name="action_yes">Да</string>
    <string name="action_finish">Завершить</string>

    <string name="message_success_creation_playlist">Плейлист «%1$s» создан</string>
    <string name="message_success_editing_playlist">Плейлист «%1$s» отредактирован</string>
    <string name="message_success_track_adding">Добавлено в плейлист «%1$s»</string>
    <string name="message_duplicate_track">Трек уже добавлен в плейлист «%1$s»</string>
    <string name="message_empty_playlist">В этом плейлисте пока нет треков</string>
    <string name="message_success_track_removed">Трек «%1$s» удалён из плейлиста</string>
    <string name="message_success_playlist_removed">Плейлист «%1$s» удалён</string>
    <string name="message_success_playlist_edited">Плейлист «%1$s» отредактирован</string>
    <string name="message_unsuccessful_sharing">В этом плейлисте нет списка треков, которым можно поделиться</string>

    <plurals name="tracks_count">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>

    <plurals name="playlist_duration">
        <item quantity="one">%1$d минута</item>
        <item quantity="few">%1$d минуты</item>
        <item quantity="many">%1$d минут</item>
        <item quantity="other">%1$d минут</item>
    </plurals>

</resources>