<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/CommonScreenStyle"
    tools:context=".main.ui.activity.MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        app:title="@string/app_name"
        style="@style/NoIconToolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/standard_indent"
        android:orientation="vertical"
        android:paddingBottom="4dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_search"
            style="@style/MainMenuButtonStyle"
            android:text="@string/hint_search"
            app:icon="@drawable/search_icon" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_library"
            style="@style/MainMenuButtonStyle"
            android:text="@string/title_media"
            app:icon="@drawable/media_library_icon" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_settings"
            style="@style/MainMenuButtonStyle"
            android:text="@string/title_settings"
            app:icon="@drawable/settings_icon" />

    </LinearLayout>

</LinearLayout>