<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".player.ui.PlayerActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/ToolbarWithBackButtonStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/large_indent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/large_indent" />

    <ImageView
        android:id="@+id/iv_album_cover_large"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/standard_indent"
        android:layout_marginBottom="@dimen/large_indent"
        android:contentDescription="@string/hint_cover_image"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/tv_track_name"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/tv_track_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/medium_indent"
        android:text="@string/hint_track_name"
        android:textAppearance="@style/YS_Medium_22"
        android:textColor="?attr/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@id/tv_artist_name"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline" />

    <TextView
        android:id="@+id/tv_artist_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/large_indent"
        android:text="@string/hint_artist_name"
        android:textAppearance="@style/YS_Medium_14"
        android:textColor="?attr/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@id/btn_play_control"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline" />

    <ImageButton
        android:id="@+id/btn_add_to_playlist"
        style="@style/SmallControlButtonStyle"
        android:contentDescription="@string/hint_add_to_playlist"
        android:src="@drawable/btn_add_icon"
        app:layout_constraintBottom_toBottomOf="@id/btn_play_control"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toTopOf="@id/btn_play_control" />

    <ImageButton
        android:id="@+id/btn_play_control"
        style="@style/PlayControlButtonStyle"
        android:layout_marginBottom="@dimen/mini_indent"
        android:alpha="0.25"
        android:contentDescription="@string/hint_play_control"
        android:enabled="false"
        android:src="@drawable/btn_play_icon"
        app:layout_constraintBottom_toTopOf="@id/tv_current_position"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@id/left_guideline" />

    <ImageButton
        android:id="@+id/btn_favorite"
        style="@style/SmallControlButtonStyle"
        android:contentDescription="@string/hint_like"
        android:src="@drawable/btn_favorite_inactive_icon"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintTop_toTopOf="@id/btn_add_to_playlist" />

    <TextView
        android:id="@+id/tv_current_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/large_indent"
        android:textAppearance="@style/YS_Medium_14"
        android:textColor="?attr/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@id/tv_duration_title"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/param_titles_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="tv_duration_title, tv_collection_name_title, tv_release_year_title, tv_genre_title, tv_country_title" />

    <TextView
        android:id="@+id/tv_duration_title"
        style="@style/TrackParameterTitle"
        android:text="@string/title_track_duration"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_duration_value"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_duration_value"
        style="@style/TrackParameterValue"
        android:text="@string/hint_track_duration"
        app:layout_constraintBottom_toTopOf="@id/tv_collection_name_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/param_titles_barrier" />

    <TextView
        android:id="@+id/tv_collection_name_title"
        style="@style/TrackParameterTitle"
        android:text="@string/title_collection_name"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_collection_name_value"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_collection_name_value"
        style="@style/TrackParameterValue"
        android:text="@string/hint_collection_name"
        app:layout_constraintBottom_toTopOf="@id/tv_release_year_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/param_titles_barrier" />

    <TextView
        android:id="@+id/tv_release_year_title"
        style="@style/TrackParameterTitle"
        android:text="@string/title_release_year"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_release_year_value"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_release_year_value"
        style="@style/TrackParameterValue"
        android:text="@string/hint_release_year"
        app:layout_constraintBottom_toTopOf="@id/tv_genre_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/param_titles_barrier" />

    <TextView
        android:id="@+id/tv_genre_title"
        style="@style/TrackParameterTitle"
        android:text="@string/title_genre"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_genre_value"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_genre_value"
        style="@style/TrackParameterValue"
        android:text="@string/hint_genre"
        app:layout_constraintBottom_toTopOf="@id/tv_country_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/param_titles_barrier" />

    <TextView
        android:id="@+id/tv_country_title"
        style="@style/TrackParameterTitle"
        android:text="@string/title_country"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_country_value"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_country_value"
        style="@style/TrackParameterValue"
        android:text="@string/hint_country"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/param_titles_barrier" />

</androidx.constraintlayout.widget.ConstraintLayout>